feature(cv): WIP Update cv and talks
Almost finished main page. Little changes on about template to hide
latest blog posts

--- a/content/pages/publications.bib
+++ b/content/pages/publications.bib
@@ -35,7 +35,8 @@
     pages = "38--47",
     ISBN = "979-8-89176-236-7",
     abstract = "This work presents Py-elotl, a suite of tools and resources in Python for processing text in several indigenous languages spoken in Mexico. These resources include parallel corpora, linguistic taggers/analyzers, and orthographic normalization tools. This work aims to develop essential resources to support language pre-processing and linguistic research, and the future creation of more complete downstream applications that could be useful for the speakers and enhance the visibility of these languages. The current version supports language groups such as Nahuatl, Otomi, Mixtec, and Huave. This project is open-source and freely available for use and collaboration",
-    bibtex_show={true}
+    bibtex_show={true},
+    selected={true}
 }
 
 @inproceedings{barriga-martinez-etal-2021-automatic,
@@ -64,7 +65,8 @@
     pages = "34--43",
     abstract = "In linguistics, interlinear glossing is an essential procedure for analyzing the morphology of languages. This type of annotation is useful for language documentation, and it can also provide valuable data for NLP applications. We perform automatic glossing for Otomi, an under-resourced language. Our work also comprises the pre-processing and annotation of the corpus. We implement different sequential labelers. CRF models represented an efficient and good solution for our task. Two main observations emerged from our work: 1) models with a higher number of parameters (RNNs) performed worse in our low-resource scenario; and 2) the information encoded in the CRF feature function plays an important role in the prediction of labels; however, even in cases where POS tags are not available it is still possible to achieve competitive results.",
     preview={images/publication_preview/gloss.png},
-    bibtex_show={true}
+    bibtex_show={true},
+    selected={true}
 }
 
 
